--- a/app/views/layouts/_jumbotron.html.erb
+++ b/app/views/layouts/_jumbotron.html.erb
@@ -1,2 +1,4 @@
-
+<div class="messages" id="messages-banner">
+    <span class="message-text" id="message-text"></span>
+</div>
 <%= render "layouts/tabs/#{params[:tab]}" %>
