See README.md for changes

--- a/app/assets/stylesheets/style-main.scss.erb
+++ b/app/assets/stylesheets/style-main.scss.erb
@@ -1523,6 +1523,7 @@ display: block;
 position: relative;
 height: auto;
 background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(<%= asset_path "/images/background/1100-camera-background.jpg" %>);
+background-size: cover;
 min-height: calc(inherit - 4.15em - 4px);
 max-height: calc(inherit - 4.15em - 4px);
 /*height: calc(100% - 4.15em - 4px); /* 2px =  <hr> */
@@ -1978,6 +1979,7 @@ width: 98.7vw; /*probably need to supplement with javascript since scrollbar wid
 .jumbotron {
 height: 100vh;
 background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(<%= asset_path "/images/background/1100-camera-background.jpg" %>);
+background-size: cover;
 min-height: 31.25em; /*min=500px*/
 width: 100%;
 
