See README.md diffs for changes

--- a/app/assets/stylesheets/style-main.scss.erb
+++ b/app/assets/stylesheets/style-main.scss.erb
@@ -209,7 +209,7 @@ from {
 
 .scrollbar-scroll {
   background: rgba(230,230,230, 0.3);
-  border: 1px solid yellow;
+  border: 1px solid white;
   width: 1.5em;
 
   position: relative;
@@ -344,7 +344,7 @@ margin-left: auto;
   font-weight: normal;
   display: flex;
   width: 100%;
-  height: 1em;
+  font-size: 1em;
   justify-content: center;
   margin: auto;
   pointer-events: none;
@@ -1927,10 +1927,6 @@ font-size: 2.2em;
 word-break: break-word;
 }
 
-
-
-
-
 /* END OF BLOG TAB FORMATTING*/
 
 /*BOTTOM BAR WITH LINKS TO SOCIAL MEDIA */  
@@ -2081,9 +2077,13 @@ opacity: 1;
 }
 
 .navMenu a {
-font-size: 0.8em;
+
 height: auto;
   
+}
+
+.navMenu span {
+  font-size: 0.8em;
 }
 
 
