--- a/app/views/layouts/_slidersContent.html.erb
+++ b/app/views/layouts/_slidersContent.html.erb
@@ -65,7 +65,7 @@
         to_add = version.gsub("#{full_dir}/", '') #removes the file route
         to_add = to_add.gsub("-#{base_file}", '') #removes the dash that separates the base filename and the filename itself
         
-        if to_add != "original" && to_add != size_breakpoints[-1].to_s && to_add != base_file #size_breakpoints comes from Application_helper.rb 
+        if to_add != "original" && to_add != size_breakpoints[-1].to_s && to_add != base_file #size_breakpoints comes from ApplicationHelper 
         #since it's used in the admin pages(when uploading) and in this public view that belongs to another controller.
 
         #this admittedly big if statement checks that the to_add value isn't == "original", isn't the LAST item of size_breakpoints (the thumbnail size)
