--- a/app/views/layouts/tabs/_contactTab.html.erb
+++ b/app/views/layouts/tabs/_contactTab.html.erb
@@ -7,45 +7,45 @@
  <div class="aboutButton" id="aboutButton"><span class="contactButtonText">About Me</span></div>
     <div class="contactText" id="contactText">
 
-        <div class="leoPhoto"><img id="leoPic" src=<%= asset_path 'images/contact/leoPhoto.jpg' %> ></div>
-      <div class="textBlock"><h1 class="photographerTitle">The photographer</h1>
-      <p id="contactPar">Born in Santiago, Chile, but raised in the city of Hamilton in the state of New Jersey, United States. Working full time as an accountant, but my real love lies with photography. I speak a fluent level of Spanish and a Native level of English so
-        I am very confortable holding conversations in either language. Please don't hesitate to get in touch with me in case you run into any inquiries regarding my servicesr. My biggest aspiration is the complete satisfaction of my clients.
-       </p>
+      <div class="leoPhoto"><img id="leoPic" src=<%= asset_path 'images/contact/leoPhoto.jpg' %> ></div>
+        <div class="textBlock"><h1 class="photographerTitle">The photographer</h1>
+          <p id="contactPar">Born in Santiago, Chile, but raised in the city of Hamilton in the state of New Jersey, United States. Working full time as an accountant, but my real love lies with photography. I speak a fluent level of Spanish and a Native level of English so
+            I am very confortable holding conversations in either language. Please don't hesitate to get in touch with me in case you run into any inquiries regarding my servicesr. My biggest aspiration is the complete satisfaction of my clients.
+          </p>
+          <div class="contactButton" id="contactButton"><span class="contactButtonText">Contact Me</span></div>
        </div>
-      </div>
+    </div>
   
-    <div class="contactButton" id="contactButton"><span class="contactButtonText">Contact Me</span></div>
+
     <div class="contactFormContainer" id="contactForm">
-      
-
-   
-   
-<div class="contactForm" id="emailForm">    
-
- <div class="contactFormText top">Send me an email</div>
-
-<%= render 'layouts/tabs/contactForm' %>
-  
-<div class="contactFormText bottom">Or, message me through:<br>
-
-<div class="contactImages"><img class="fbIcon" id="fbMessageButton" src="http://casamiasrestaurant.com/communities/7/000/001/042/387//images/3401337_30x30.jpg">
-<div class="socialMessageBox" id="fbMessageBox"><div class="closeButton" id="fbMessageBoxClose">x</div><div class="fb-page" id="fb-iframe"
-         data-href="https://www.facebook.com/LPAtestpage/" 
-         data-tabs="messages" 
-         data-width="250" 
-         data-height="300" 
-         data-small-header="true">
-      <div class="fb-xfbml-parse-ignore">
-        <blockquote></blockquote>
-      </div>
-    </div>
-    </div><a href="https://twitter.com/intent/tweet?screen_name=e0plusdev_test"><img class="twitterIcon-message" src="https://g.twimg.com/dev/documentation/image/Twitter_logo_blue_32.png"></a>
-    </div>
-    </div>
     
+      <div class="contactForm" id="emailForm">    
 
-     </div>   
+        <div class="contactFormText top">Send me an email</div>
+
+        <%= render 'layouts/tabs/contactForm' %>
+        
+        <div class="contactFormText bottom">Or, message me through:<br>
+
+        <div class="contactImages"><img class="fbIcon" id="fbMessageButton" src="http://casamiasrestaurant.com/communities/7/000/001/042/387//images/3401337_30x30.jpg">
+          
+          <div class="socialMessageBox" id="fbMessageBox"><div class="closeButton" id="fbMessageBoxClose">x</div>
+                <div class="fb-page" id="fb-iframe"
+                  data-href="https://www.facebook.com/LPAtestpage/" 
+                  data-tabs="messages" 
+                  data-width="250" 
+                  data-height="300" 
+                  data-small-header="true">
+                  <div class="fb-xfbml-parse-ignore">
+                    <blockquote></blockquote>
+                  </div>
+              </div>
+          </div><a href="https://twitter.com/intent/tweet?screen_name=e0plusdev_test"><img class="twitterIcon-message" src="https://g.twimg.com/dev/documentation/image/Twitter_logo_blue_32.png"></a>
+        </div>
+
+        </div>
+          
+      </div>   
   <!-- I don't really like that the fb message box and the twitter msg box are different, but twitter doesn't allow embedding the web intents target page, maybe I can iframe it if I remove the script?   -->
        
   </div> 
