Adds created files to file manager front end, clears upload prep area after upload, makes evt listener work with loading dots on slides tab

--- a/app/assets/stylesheets/style-main.scss.erb
+++ b/app/assets/stylesheets/style-main.scss.erb
@@ -768,8 +768,17 @@ margin-bottom: auto;
   justify-content: center;
   margin: auto;
   position: absolute;
+  min-height: 75vh;
+  min-width: 100vw;
 
 }
+
+.dots {
+
+margin: auto 0 auto 0;
+
+}
+
 
 .outer-border {
   display: flex;
