--- a/app/views/admin/files/files.html.erb
+++ b/app/views/admin/files/files.html.erb
@@ -40,6 +40,7 @@ li {
 	margin-left: 40px;
 	margin-top: 15px;
 	margin-bottom: 15px;
+	height: 2em;
 	cursor: pointer;
 	list-style-type: disc;
 	list-style-position: inside;
