Fixes folder display on admin file manager

--- a/app/views/admin/files/files.html.erb
+++ b/app/views/admin/files/files.html.erb
@@ -162,7 +162,7 @@ width: 100%;
 <span class="action-description">Here you can browse the files currently in your S3 bucket</span>
 <p class='action-description'>Notes:<br>Ctrl + left click (or long touch on mobile devices) selects/unselects files</p>
 
-<div class="upload-dir-container" id="root">
+<div class="upload-dir-container open" id="root">
 
 </div>
 
