--- a/app/views/admin/users/_menu.html.erb
+++ b/app/views/admin/users/_menu.html.erb
@@ -5,7 +5,7 @@
     <% if logged_in? && current_user.admin && @user.id == current_user.id %>
         <%= link_to "Create new user", new_admin_user_path, method: "get", class: "new-user-link" %>
         <%= link_to "See all users", admin_users_path, method: "get", class: "all-users-link" %>
-       
+        <%= link_to "File manager", admin_files_path, method: "get", class: "files-link" %>
     <% end %>
         <%= link_to "Log out", admin_logout_path, method: "delete", class: "logout-link" %>
 </div>
