--- a/app/assets/stylesheets/style-main.scss.erb
+++ b/app/assets/stylesheets/style-main.scss.erb
@@ -81,12 +81,12 @@ $anim-duration: 0.65s;
 }
 
 @keyframes menuContract {
-0%{
-height: 100vh;
-}
-100% {
-height: 15vh;
-}
+  0%{
+    height: 100%;
+  }
+  100% {
+    height: 80px;
+  }
 }
 
 
