--- a/app/assets/stylesheets/style-main.scss.erb
+++ b/app/assets/stylesheets/style-main.scss.erb
@@ -82,7 +82,7 @@ $anim-duration: 0.65s;
 
 @keyframes menuContract {
   0%{
-    height: 100%;
+    height: 100vh;
   }
   100% {
     height: 80px;
