Fixes bugs on file manager

--- a/app/views/admin/files/files.html.erb
+++ b/app/views/admin/files/files.html.erb
@@ -73,7 +73,9 @@ ul, span {
 	border-radius: 2px;
 	border: 1px solid blue;
 }
-
+.selected.open {
+	color: light-blue;
+}
 form {
 	width: 100%;
 }
@@ -135,6 +137,10 @@ hr.file-info {
 	height: 2px;
 }
 
+span.open {
+	color: green;
+}
+
 @media screen and (max-width: 480px) {
 .user-data-form-container {
 	width: 100%;
@@ -154,6 +160,7 @@ width: 100%;
 
 
 }
+
 
 
 </style>
