--- a/app/views/admin/files/files.html.erb
+++ b/app/views/admin/files/files.html.erb
@@ -66,16 +66,14 @@ ul, span {
 
 }
 .selected {
-	background-color: #7784D9;
+	background-color: #4274f4;
 	color: white;
 	font-weight: bold;
 	font-style: italic;
 	border-radius: 2px;
 	border: 1px solid blue;
 }
-.selected.open {
-	color: light-blue;
-}
+
 form {
 	width: 100%;
 }
@@ -139,6 +137,9 @@ hr.file-info {
 
 span.open {
 	color: green;
+}
+span.selected.open {
+	color: lightgreen;
 }
 
 @media screen and (max-width: 480px) {
