--- a/app/views/admin/posts/new.html.erb
+++ b/app/views/admin/posts/new.html.erb
@@ -97,7 +97,7 @@
                 <% end %> 
                                 <hr>
                 <%#= f.file_field :image, accept: 'image/jpeg, image/gif, image/png', class:'upload-btn' %>
-                <%= form_tag({controller: :admin, action: :upload_file, file_route: 'posts/'},  multipart: true, id: 'upload-file-form') do %>
+                <%= form_tag({controller: :admin, action: :upload_file, file_route: 'images/posts/'},  multipart: true, id: 'upload-file-form') do %>
                     
                     <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
    
@@ -109,7 +109,7 @@
                        <hr>
                 <% end %>
             </div>
-           
+           <!-- Prob have to leave out the submit forms because they make it so the css here is not consistent with the true front end -->
             
             <div class="post-sidebar">
              <span class="action-description">Messages<br></span>
@@ -169,7 +169,7 @@
                     });
 
                     $("#messages").html(dummyElement.innerHTML + $("#messages").html());
-                    
+
                     document.body.removeChild(dummyElement);
                 }
                 else {
