WIP hometab img optim

--- a/app/assets/stylesheets/style-main.scss.erb
+++ b/app/assets/stylesheets/style-main.scss.erb
@@ -521,13 +521,13 @@ pointer-events: none;
 
 
 #thumbnailPhoto1 {
-background: url(<%= asset_path 'images/home/people.jpg' %>); 
+background: url(<%= asset_path 'images/home/480-home-1.jpg' %>); 
 background-size: cover;
 background-repeat: no-repeat;
 }
 
 #thumbnailPhoto1:hover{
-background-image: linear-gradient(rgba(0,0,0, 0.3), rgba(0,0,0, 0.3)), url(<%= asset_path 'images/home/people.jpg' %>);
+background-image: linear-gradient(rgba(0,0,0, 0.3), rgba(0,0,0, 0.3)), url(<%= asset_path 'images/home/480-home-1.jpg' %>);
 background-size: cover;
 background-repeat: no-repeat;  
 font-size: 1em;
@@ -537,13 +537,13 @@ font-weight: bold;
 
 
 #thumbnailPhoto2{
-background: url(<%= asset_path 'images/home/models.jpg' %>); 
+background: url(<%= asset_path 'images/home/480-home-2.jpg' %>); 
 background-size: cover;
 background-repeat: no-repeat;  
 }
 
 #thumbnailPhoto2:hover {
-background-image: linear-gradient(rgba(0,0,0, 0.3), rgba(0,0,0, 0.3)), url(<%= asset_path 'images/home/models.jpg' %>);
+background-image: linear-gradient(rgba(0,0,0, 0.3), rgba(0,0,0, 0.3)), url(<%= asset_path 'images/home/480-home-2.jpg' %>);
 background-size: cover;
 background-repeat: no-repeat;  
 font-size: 1em;
@@ -553,14 +553,14 @@ font-weight: bold;
 }
 
 #thumbnailPhoto3{
-background: url(<%= asset_path 'images/home/urban.jpg' %>); 
+background: url(<%= asset_path 'images/home/480-home-3.jpg' %>); 
 background-size: cover;
 background-repeat: no-repeat;  
   
 }
 
 #thumbnailPhoto3:hover{
-background: linear-gradient(rgba(0,0,0, 0.3), rgba(0,0,0, 0.3)), url(<%= asset_path 'images/home/urban.jpg' %>); 
+background: linear-gradient(rgba(0,0,0, 0.3), rgba(0,0,0, 0.3)), url(<%= asset_path 'images/home/480-home-3.jpg' %>); 
 background-size: cover;
 background-repeat: no-repeat;  
 font-size: 1em;
@@ -570,14 +570,14 @@ font-weight: bold;
 }
 
 #thumbnailPhoto4{
-background: url(<%= asset_path 'images/home/events.jpg' %>); 
+background: url(<%= asset_path 'images/home/480-home-4.jpg' %>); 
 background-size: cover;
 background-repeat: no-repeat;  
   
 }
 
 #thumbnailPhoto4:hover {
-background: linear-gradient(rgba(0,0,0, 0.3), rgba(0,0,0, 0.3)), url(<%= asset_path 'images/home/events.jpg' %>); 
+background: linear-gradient(rgba(0,0,0, 0.3), rgba(0,0,0, 0.3)), url(<%= asset_path 'images/home/480-home-4.jpg' %>); 
 background-size: cover;
 background-repeat: no-repeat;  
 font-size: 1em;
