--- a/app/assets/stylesheets/style-main.scss.erb
+++ b/app/assets/stylesheets/style-main.scss.erb
@@ -466,6 +466,10 @@ display: inline;
   font-family: Helvetica, Calibri, Arial, Sans-serif;
 }
 
+.home-main-img-container {
+  display: inline
+}
+
 .home-main-img {
   display: block;
   margin-top: 5px;
