--- a/app/views/admin/posts/_post.html.erb
+++ b/app/views/admin/posts/_post.html.erb
@@ -1,6 +1,6 @@
 	
 	<% sanitized_slug = sanitize params[:slug] %>
-	<% if sanitized_slug === "zetaomega9ya-itsindeedthelastpostletmego" %>
+	<% if sanitized_slug === "theverylastpost999" %>
 		<% sanitized_slug = sanitize Post.last.slug %>
 	<% end %>
 
