--- a/app/views/layouts/tabs/_contactTab.html.erb
+++ b/app/views/layouts/tabs/_contactTab.html.erb
@@ -27,7 +27,7 @@
         
         <div class="contactFormText bottom">Or, message me through:<br>
 
-        <div class="contactImages"><img class="fbIcon" id="fbMessageButton" src="http://casamiasrestaurant.com/communities/7/000/001/042/387//images/3401337_30x30.jpg">
+        <div class="contactImages"><img class="fbIcon" tabindex="0" id="fbMessageButton" src="http://casamiasrestaurant.com/communities/7/000/001/042/387//images/3401337_30x30.jpg">
           
           <div class="socialMessageBox" id="fbMessageBox"><div class="closeButton" id="fbMessageBoxClose">x</div>
                 <div class="fb-page" id="fb-iframe"
@@ -40,7 +40,7 @@
                     <blockquote></blockquote>
                   </div>
               </div>
-          </div><a href="https://twitter.com/intent/tweet?screen_name=e0plusdev_test"><img class="twitterIcon-message" src="https://g.twimg.com/dev/documentation/image/Twitter_logo_blue_32.png"></a>
+          </div><a href="https://twitter.com/intent/tweet?screen_name=e0plusdev_test" tabindex="0"><img class="twitterIcon-message" src="https://g.twimg.com/dev/documentation/image/Twitter_logo_blue_32.png"></a>
         </div>
 
         </div>
