Adds file manager sorting by file or folder

--- a/app/views/admin/files/files.html.erb
+++ b/app/views/admin/files/files.html.erb
@@ -41,9 +41,15 @@ li {
 	margin-top: 15px;
 	margin-bottom: 15px;
 	height: 2em;
+	line-height: 2em;
 	cursor: pointer;
-	list-style-type: disc;
+	list-style-type: none;
 	list-style-position: inside;
+}
+
+li img {
+	vertical-align: middle;
+
 }
 
 ul, span {
