--- a/app/views/admin/files/files.html.erb
+++ b/app/views/admin/files/files.html.erb
@@ -3,7 +3,7 @@
 <%= javascript_include_tag 'jquery'%>
 <%= javascript_include_tag 'jquery_ujs'%>
 <%= stylesheet_link_tag 'admin', media: 'all' %>
-
+<%= stylesheet_link_tag 'file-manager', media: 'all' %>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <%= csrf_meta_tag %>
 
@@ -23,154 +23,8 @@
 <% files_in_bucket = s3.list_objects(bucket: ENV['AWS_S3_BUCKET']).contents.map(&:key) %>
 
 <script id="initial-script">
-initialArray = <%= raw files_in_bucket %> // a global to be deleted on document.ready
+	initialArray = <%= raw files_in_bucket %> // a global to be deleted on document.ready
 </script>
-
-<%# not sure if its worth to add these specific styles to another file/to admin.scss, since it's so little %>
-
-<style>
-body {
-	flex-direction: column;
-}
-
-.user-data-form-container {
-	width: 50%;
-}
-li {
-	margin-left: 40px;
-	margin-top: 15px;
-	margin-bottom: 15px;
-	height: 2em;
-	line-height: 2em;
-	cursor: pointer;
-	list-style-type: none;
-	list-style-position: inside;
-}
-
-li img {
-	vertical-align: middle;
-
-}
-
-ul, span {
-	cursor: pointer;
-}
-
-.upload-dir-container {
-	border: 1px solid blue;
-	background-color: rgb(200, 200, 200);
-	text-decoration: underline blue;
-
-}
-
-.message-box {
-	display: flex;
-	position: relative;
-	margin: auto;
-	width: 100%;
-	justify-content: center;
-
-}
-.selected {
-	background-color: #4274f4;
-	color: white;
-	font-weight: bold;
-	font-style: italic;
-	border-radius: 2px;
-	border: 1px solid blue;
-}
-
-form {
-	width: 100%;
-}
-.file-dashboard {
-display: flex;	
-}
-
-.file-dashboard li {
-margin: 5px 0 5px 0;
-}
-
-.file-list {
-display: flex;
-flex-direction: column;
-min-width: 25%;
-width: 25%;
-max-width: 25%;
-overflow: auto;
-
-}
-
-/*button.file-list {
-min-width: 12.5%;
-width: 12.5%;
-max-width: 12.5%;
-height: auto;
-}*/
-
-button.file-list#model {
-display:none;
-}
-
-li.file-info {
-list-style-type: none;	
-margin: auto;
-
-}
-
-.file-list-button-container {
-display: flex;
-flex-direction:row;
-
-}
-
-.file-list button {
-	margin: auto;
-min-height: 36px; /*same as li fontsize + margin*/
-max-height: 36px;
-width: 50%;	
-}
-.file-divider {
-margin: 3px 0 3px 0;
-
-}
-
-hr.file-info {
-	background-color: rgb(41, 57, 82);
-	width: 100%;
-	height: 2px;
-}
-
-span.open {
-	color: green;
-}
-span.selected.open {
-	color: lightgreen;
-}
-
-@media screen and (max-width: 480px) {
-.user-data-form-container {
-	width: 100%;
-	font-size: 90%;
-}
-
-.file-list button {
-margin: 0;
-width: 100%;
-
-}
-
-.file-dashboard .action-description {
-	margin-bottom: 5px;
-}
-
-
-
-}
-
-
-
-</style>
 
 <span class="action-title">File Manager</span>
 <span class="action-description">Here you can browse the files currently in your S3 bucket</span>
