Small css fix on blogtab post sidebar menu

--- a/app/assets/stylesheets/style-main.scss.erb
+++ b/app/assets/stylesheets/style-main.scss.erb
@@ -1308,9 +1308,9 @@ box-sizing: border-box;
 }
 
 .post-sidebar-menu {
-  height: 0 auto auto auto;
+
   width: 100%;
-  margin: auto auto auto auto; 
+  margin: 1px auto auto auto; 
   display: flex;
   flex-direction: column;
   font-family: Helvetica, Calibri, sans-serif;
